--- a/src/components/SideNav/sidenav.scss
+++ b/src/components/SideNav/sidenav.scss
@@ -3,3 +3,10 @@
 	min-height: 100%;
 	background: #333;
 }	
+
+.SideNav-companyLogo {
+	color: #fff;
+	padding: 15px 0 15px 15px;
+	font-size: 1.5rem;
+	display: block;
+}
