--- a/src/components/SideNav/sidenav.scss
+++ b/src/components/SideNav/sidenav.scss
@@ -5,8 +5,10 @@
 }	
 
 .SideNav-companyLogo {
-	color: #fff;
-	padding: 15px 0 15px 15px;
-	font-size: 1.5rem;
+	color: #82E9F3;
+	font-weight: 300;
+	cursor: pointer;
+	padding: 15px 0 10px 15px;
+	font-size: 1.8rem;
 	display: block;
 }
