--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -1,14 +1,37 @@
 .Menu {
   margin: 0;
-  padding: 0 0 0 1em;
+  padding: 0 0 0 15px;
+}
+
+.Menu-caption {
+  color: rgba(255, 255, 255, 0.9);
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1em;
+  letter-spacing: 3px;
+  margin: 1em -15px .1em;
+  padding: .5em 0 .5em 25px;
+  background: #3E3E3E;
 }
 
 .Menu-item {
   list-style: none;
-  margin: .5em 0;
+  padding: .5em 0;
+  margin: 0;
+  font-size: .95rem;
+
+  [class^='fa'] {
+    width: 1em;
+    margin-right: .7em;
+  }
 }
 
 .Menu-item-link,
 .Menu-item {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.7);
+  transition: 300ms;
+
+  &:hover {
+    color: #fff;
+  }
 }
