Add ActionBar + small fixes

--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -29,7 +29,7 @@
 .Menu-item-link,
 .Menu-item {
   color: rgba(255, 255, 255, 0.7);
-  transition: 300ms;
+  transition: color 300ms;
 
   &:hover {
     color: #fff;
