--- a/src/components/ActionBar/actionbar.scss
+++ b/src/components/ActionBar/actionbar.scss
@@ -1,6 +1,6 @@
 .ActionBar {
 	position: fixed;
-	width: 16.66666667%;
+	width: 16.66666667%; // Not the best solution - width of the SideNav
 	bottom: 0;
 	left: 0;
 	display: flex;
