Add some google charts

--- a/src/components/Box/box.scss
+++ b/src/components/Box/box.scss
@@ -45,3 +45,14 @@
 	color: rgba(255, 255, 255, 0.8);
 	font-size: 1.3rem !important;
 }
+
+.ChartBox {
+	padding: 0 .5em 1em;
+}
+
+.ChartBox-title {
+	margin: .5em .5em 0;
+	color: #666;
+	font-size: 1.2rem;
+	text-align: center;
+}
