Change Header-button not to be link

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -7,7 +7,9 @@
 }
 
 .Header-button {
-	padding: .4em .6em;
+	padding: .5em .6em;
+	color: #0E9AA7;
+	font-size: 1em;
 	border: 1px solid #0E9AA7;
 	border-radius: .3em;
 	transition: 200ms;
