--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -1,6 +1,6 @@
 .Menu {
   margin: 0;
-  padding: 0 0 0 15px;
+  padding: 0;
 }
 
 .Menu-caption {
@@ -9,8 +9,8 @@
   font-weight: 600;
   font-size: 1em;
   letter-spacing: 3px;
-  margin: 1em -15px .1em;
-  padding: .5em 0 .5em 25px;
+  margin: 1em 0 .1em;
+  padding: .5em 0 .5em 27px;
   background: #3E3E3E;
 }
 
@@ -30,6 +30,7 @@
   color: rgba(255, 255, 255, 0.7);
   transition: color 300ms, transform 200ms;
   display: block;
+  padding: 0 15px 0 30px;
 
   &:hover {
     color: #fff;
