--- a/src/components/SideNav/sidenav.scss
+++ b/src/components/SideNav/sidenav.scss
@@ -2,9 +2,10 @@
 	height: 100vh;
 	min-height: 100%;
 	background: #333;
-	position: relative;
+	position: fixed;
 	overflow: auto;
-	padding-bottom: 32px; // Height of ActionBar
+	padding-bottom: 32px + 15px; // Height of ActionBar + some extra
+	width: 17%;
 }	
 
 // This can definitely be deleted
