--- a/src/components/Box/box.scss
+++ b/src/components/Box/box.scss
@@ -1,7 +1,7 @@
 .Box {
 	background: white;
 	border: 1px solid #F3F3F3;
-	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 	padding: 1em;
 	position: relative;
 	animation: slideIn 400ms;
@@ -35,7 +35,9 @@
 }
 
 .SummaryBox {
+	border: none;
 	padding: .5em 1em;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .SummaryBox-title {
