Edit Notifications button etc

--- a/src/components/Box/box.scss
+++ b/src/components/Box/box.scss
@@ -4,18 +4,6 @@
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 	padding: 1em;
 	position: relative;
-	animation: slideIn 400ms;
-}
-
-@keyframes slideIn {
-	from {
-		transform: translate(0, 10%);
-		opacity: 0.3;
-	}
-	to {
-		transform: translate(0, 0);
-		opacity: 1;
-	}
 }
 
 .Box--blue {
@@ -32,6 +20,19 @@
 
 .Box--orange {
 	background: lighten(#e67e22, 10%);
+}
+
+.Box-settings {
+	position: absolute;
+	top: 10px;
+	right: 15px;
+
+	button {
+		color: #ABABAB;
+		font-size: 0.8em;
+
+		&:hover { color: #666; }
+	}
 }
 
 .SummaryBox {
@@ -69,4 +70,6 @@
 	color: #666;
 	font-size: 1.2rem;
 	text-align: center;
+  border-bottom: 1px dashed #EAEAEA;
+  padding-bottom: 0.6em;
 }
