--- a/src/components/Header/components/user-info.scss
+++ b/src/components/Header/components/user-info.scss
@@ -19,7 +19,19 @@
 .UserInfo-notifications {
 	font-size: 1.1em;
 	position: relative;
-	margin-right: 30px;
+	margin-right: 15px;
+}
+
+@keyframes shake {
+	0% {
+		transform: scale(1)
+	}
+	50% {
+		transform: scale(0.97)
+	}
+	100% {
+		transform: scale(1)
+	}
 }
 
 .UserInfo-notifications-count {
@@ -32,4 +44,6 @@
 	line-height: 1;
 	background: #ea6153;
 	color: white;
+	animation: shake 1s infinite;
+	animation-delay: 3s;
 }
