--- a/src/styles/base/text.scss
+++ b/src/styles/base/text.scss
@@ -45,3 +45,10 @@ a {
 		background: $blue;
 	}
 }
+
+.Content img {
+	max-width: 100%;
+	height: auto;
+	box-shadow: 1px 2px 4px rgba(0,0,0,0.1);
+	border: 1px solid rgba(0,0,0,0.1);
+}
