--- a/src/components/Box/box.scss
+++ b/src/components/Box/box.scss
@@ -66,7 +66,7 @@
 }
 
 .ChartBox-title {
-	margin: .5em .5em;
+	margin: .5em .5em !important;
 	color: #666;
 	font-size: 1.2rem;
 	text-align: center;
